samples/_failures_safe/1761142254_e0a6a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37df3677.c: In function ‘main’:
./samples/SAFE/__tmp_37df3677.c:178:9: error: expected expression at end of input
  178 |         printf("\t%s\n",
      |         ^~~~~~
./samples/SAFE/__tmp_37df3677.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37df3677.c:178:9: error: expected declaration or statement at end of input
